<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/color_white"
    android:orientation="vertical" >
    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@drawable/title_bg" >
        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/network_monitor"
            android:textSize="@dimen/dimen_textsize_20sp" 
            android:textColor="@color/color_white"/>
        <Button
            android:id="@+id/button_setting"
            android:layout_width="@dimen/dimen_50dip"
            android:layout_height="@dimen/dimen_30dip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dimen_15dip"
            android:background="@drawable/setting_btn_selector"
            android:layout_centerVertical="true"
            android:text="@string/setting"
            android:textSize="@dimen/dimen_textsize_14sp" 
            android:textColor="@color/color_white"/>
    </RelativeLayout>

    <!--embed view-->
    <LinearLayout android:id="@+id/containerBody"
        android:layout_weight="1" 
        android:layout_height="0dip"
        android:layout_width="fill_parent">        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/color_deep_grey" >
        <TextView
            android:id="@+id/textView_flux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/traffic_main_unchecked_pressed"
            android:gravity="center_horizontal"
            android:text="@string/flux_monitor"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/main_bottom_text_color_selected" />


        <TextView
            android:id="@+id/textView_fire_wall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/traffic_tab_firewall_unchecked"
            android:gravity="center"
            android:text="@string/fire_wall"
            android:textColor="@color/main_bottom_text_color_selected" />

        <TextView
            android:id="@+id/textView_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableTop="@drawable/traffic_list_unchecked"
            android:gravity="center_horizontal"
            android:text="@string/statistic_list"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/main_bottom_text_color_selected" />
    </LinearLayout>
</LinearLayout>