<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_firewall"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item_big_title"
        android:orientation="horizontal"
        android:paddingLeft="6.0dip"
        android:paddingRight="6.0dip" >

        <TextView
            style="@style/textAppearanceMedium"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:singleLine="true"
            android:text="@string/firewall_title_main"
            android:textColor="#ff7f8286" />

        <LinearLayout
            android:layout_width="128.0dip"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3.0dip"
            android:layout_marginTop="3.0dip"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/firewall_button_mobile"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/selector_firewall_btn"
                android:clickable="true"
                android:drawableTop="@drawable/mobile_data_on"
                android:gravity="center_horizontal"
                android:paddingBottom="3.0dip"
                android:paddingTop="3.0dip"
                android:text="@string/firewall_mobile_data"
                android:textColor="@color/color_green"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/firewall_button_wifi"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/selector_firewall_btn"
                android:clickable="true"
                android:drawableTop="@drawable/wifi_data_on"
                android:gravity="center_horizontal"
                android:paddingBottom="3.0dip"
                android:paddingTop="3.0dip"
                android:text="@string/firewall_wifi_data"
                android:textColor="@color/color_green"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout 
        android:id="@+id/firewall_layout_list"
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
        android:visibility="gone">
	    <ListView
	        android:id="@+id/firewall_app_list"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content">
	    </ListView>
    </LinearLayout>

    <LinearLayout 
        android:id="@+id/firewall_layout_loading"
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="center"
	    android:orientation="vertical">"
	    <ImageView
	        android:id="@+id/loading_image"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"    
	        android:gravity="center"
	        android:layout_gravity="center"
	        android:src="@drawable/loading_round" />
	
	    <TextView
	        android:id="@+id/loading_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"	
	        android:gravity="center_vertical"
	        android:text="@string/loading"
	        android:textColor="@color/color_green" />
    </LinearLayout>
    
</LinearLayout>